# plugin-version-commit-hook

./: .pre-commit-hooks.yaml  LICENSE  plugin_version_commit_hook.py  pyproject.toml
